
0.6.3
* Response and request filter can now return also callables
* Added getStage() method to the controller to control wich methods should be 
  called
* Improve void session to save values in memory
* Added clearError() method to validate

0.6.2
* Added JWT and JWS library
* Json decode throws now an exception if decoding fails
* Add void session
* Add support to call controller through cli to simplify testing
* Improve error response handling

0.6.1
* Improved cache class

0.6
* Added dispatch class wich routes the request to the controller. Also applies
  the request and response filter wich are defined by the controller
* The controller proxies unknown get* methods to the container
* Improved template and added template wrapper classes for twig and smarty
* Improved DI container interoperability it is now possible to use the symfony 
  DI container instead of the psx DI container
* Use composer autoloader
* Added json activity stream writer
* Add simple xrds writer
* Extract xml, atom and rss writer into class for usage outside of the data 
  writer context
* Remove logging library
* Added Sitemap an Odata libraries
* Improved activity stream classes
* Add method get, getBy and getOneBy to handler interface

0.5.4
* Fixed record serialize
* Fix select remove getDefaultRecordClass call from underlying table and remove
  getResultSet method
* Improved select and record test

0.5.3
* Fix Oauth2 error exception types
* Improve handler abstract and interface
* Use json encode/decode to un/serialize records
* ResultSet add getter methods and add(), clear() method
* Remove static parse methods from Condition
* Remove getDefaultRecordClass from TableAbstract since the table has not to 
  decide wich object should be used this is part of the handler
* Improve tests and remove create table statments in tests

0.5.2
* Use port in base self url
* Config option to set include path

0.5.1
* Added autoload parameter in config to disable autoloading in case an external